# slurm_report

./: .gitignore  README.md  pyproject.toml
slurm_report/: cli.py  report.py  utils.py
