[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_report"
version = "0.1.0"
description = "A CLI tool to generate SLURM usage reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "tabulate",
]

[project.scripts]
slurm_report = "slurm_report.cli:main"
